// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FindOneArgsType should create an args type with a custom ID type 1`] = `
"type Query {
  test(
    """The id of the record to find."""
    id: String!
  ): Int!
}"
`;

exports[`FindOneArgsType should create an args type with id field as the type 1`] = `
"type Query {
  test(
    """The id of the record to find."""
    id: ID!
  ): Int!
}"
`;
